--- a/pom.xml
+++ b/pom.xml
@@ -107,16 +107,10 @@
          <name>Public online Restlet repository</name>
          <url>http://maven.restlet.org</url>
       </repository>
-      <repository>
-         <id>wwmm</id>
-         <name>WWMM maven repository</name>
-         <url>http://wwmm.ch.cam.ac.uk/maven2/
-         </url>
-      </repository>
-      <repository>
-			<id>daedal</id>
-			<url>http://daedal.ch.cam.ac.uk:8080/m2repo</url>
-		</repository>
+	  <repository>
+	    <id>ucc</id>
+	    <url>https://maven.ch.cam.ac.uk/m2repo</url>
+	  </repository>
 <!--		<repository>
 			<id>codehaus</id>
 			<url>http://repository.codehaus.org/
@@ -130,19 +124,14 @@
    <dependencies>
       <dependency>
          <groupId>opsin</groupId>
-         <artifactId>smiles</artifactId>
-         <version>0.5.4-SNAPSHOT</version>
+         <artifactId>core</artifactId>
+         <version>0.6.2-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>opsin</groupId>
          <artifactId>inchi</artifactId>
-         <version>0.5.4-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-         <groupId>opsin</groupId>
-         <artifactId>depiction</artifactId>
-         <version>0.5.4-SNAPSHOT</version>
-      </dependency>
+         <version>0.6.2-SNAPSHOT</version>
+      </dependency>      
 
 <!-- 
       <dependency>
@@ -223,6 +212,16 @@
          <artifactId>mockito-all</artifactId>
          <version>1.3</version>
          <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.openscience</groupId>
+         <artifactId>cdk</artifactId>
+         <version>1.3.4</version>
+      </dependency>
+      <dependency>
+         <groupId>org.openscience</groupId>
+         <artifactId>jchempaint</artifactId>
+         <version>9</version>
       </dependency>
    </dependencies>
    <reporting>
