--- a/pom.xml
+++ b/pom.xml
@@ -115,12 +115,12 @@
       <dependency>
          <groupId>opsin</groupId>
          <artifactId>core</artifactId>
-         <version>0.6.2-SNAPSHOT</version>
+         <version>LATEST</version>
       </dependency>
       <dependency>
          <groupId>opsin</groupId>
          <artifactId>inchi</artifactId>
-         <version>0.6.2-SNAPSHOT</version>
+         <version>LATEST</version>
       </dependency>      
 
 <!-- 
