--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,12 @@
    <packaging>war</packaging>
    <version>0.1-SNAPSHOT</version>
    <name>OPSIN Web Service</name>
+  <licenses>
+    <license>
+      <name>GNU General Public License, version 3</name>
+      <url>http://www.opensource.org/licenses/gpl-3.0</url>
+    </license>
+  </licenses>
    <build>
       <resources>
         <resource>
@@ -86,19 +92,6 @@
                </execution>
             </executions>
          </plugin>
-       <plugin>
-          <artifactId>maven-assembly-plugin</artifactId>
-          <configuration>
-          <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-           <archive>
-              <manifest>
-                 <mainClass>uk.ac.cam.ch.opsin.ws.RestletTest</mainClass>
-              </manifest>
-           </archive>
-         </configuration>
-       </plugin>
       </plugins>
    </build>
    <repositories>
@@ -138,21 +131,9 @@
          <version>1.4</version>
       </dependency>
       <dependency>
-         <groupId>cdk</groupId>
-         <artifactId>cdk</artifactId>
-         <version>20071025</version>
-      </dependency>
-      <dependency>
-      <!-- required by CDK -->
-        <groupId>java3d</groupId>
-        <artifactId>vecmath</artifactId>
-        <version>1.3.1</version>
-      </dependency>
-      <dependency>
-        <!-- required by CDK -->
-        <groupId>jgrapht</groupId>
-        <artifactId>jgrapht</artifactId>
-        <version>0.6.0</version>
+        <groupId>dan2097.org.bitbucket</groupId>
+        <artifactId>indigo-loader</artifactId>
+        <version>1.0.8-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>junit</groupId>
