--- a/pom.xml
+++ b/pom.xml
@@ -131,9 +131,19 @@
          <version>1.4</version>
       </dependency>
       <dependency>
-        <groupId>dan2097.org.bitbucket</groupId>
-        <artifactId>indigo-loader</artifactId>
-        <version>1.0.8-SNAPSHOT</version>
+        <groupId>com.ggasoftware.indigo</groupId>
+        <artifactId>indigo</artifactId>
+        <version>1.0.9</version>
+      </dependency>
+      <dependency>
+        <groupId>com.ggasoftware.indigo</groupId>
+        <artifactId>indigo-renderer</artifactId>
+        <version>1.0.9</version>
+      </dependency>
+      <dependency>
+        <groupId>com.ggasoftware.indigo</groupId>
+        <artifactId>jna</artifactId>
+        <version>1.0.9</version>
       </dependency>
       <dependency>
          <groupId>junit</groupId>
