--- a/pom.xml
+++ b/pom.xml
@@ -106,14 +106,14 @@
    </properties>
    <dependencies>
       <dependency>
-         <groupId>opsin</groupId>
-         <artifactId>core</artifactId>
-         <version>1.0-SNAPSHOT</version>
+         <groupId>uk.ac.cam.ch.opsin</groupId>
+         <artifactId>opsin-core</artifactId>
+         <version>1.0.0</version>
       </dependency>
       <dependency>
-         <groupId>opsin</groupId>
-         <artifactId>inchi</artifactId>
-         <version>1.0-SNAPSHOT</version>
+         <groupId>uk.ac.cam.ch.opsin</groupId>
+         <artifactId>opsin-inchi</artifactId>
+         <version>1.0.0</version>
       </dependency>
       <dependency>
          <groupId>org.restlet.jse</groupId>
