--- a/pom.xml
+++ b/pom.xml
@@ -108,12 +108,12 @@
       <dependency>
          <groupId>uk.ac.cam.ch.opsin</groupId>
          <artifactId>opsin-core</artifactId>
-         <version>1.2.0</version>
+         <version>2.0-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>uk.ac.cam.ch.opsin</groupId>
          <artifactId>opsin-inchi</artifactId>
-         <version>1.2.0</version>
+         <version>2.0-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>org.restlet.jse</groupId>
@@ -133,17 +133,17 @@
       <dependency>
         <groupId>com.ggasoftware.indigo</groupId>
         <artifactId>indigo</artifactId>
-        <version>1.1-alpha3</version>
+        <version>1.1-beta7</version>
       </dependency>
       <dependency>
         <groupId>com.ggasoftware.indigo</groupId>
         <artifactId>indigo-renderer</artifactId>
-        <version>1.1-alpha3</version>
+        <version>1.1-beta7</version>
       </dependency>
       <dependency>
         <groupId>com.ggasoftware.indigo</groupId>
         <artifactId>jna</artifactId>
-        <version>1.1-alpha3</version>
+        <version>1.1-beta7</version>
       </dependency>
       <dependency>
          <groupId>junit</groupId>
