--- a/pom.xml
+++ b/pom.xml
@@ -108,12 +108,12 @@
       <dependency>
          <groupId>uk.ac.cam.ch.opsin</groupId>
          <artifactId>opsin-core</artifactId>
-         <version>2.0-SNAPSHOT</version>
+         <version>1.3.0</version>
       </dependency>
       <dependency>
          <groupId>uk.ac.cam.ch.opsin</groupId>
          <artifactId>opsin-inchi</artifactId>
-         <version>2.0-SNAPSHOT</version>
+         <version>1.3.0</version>
       </dependency>
       <dependency>
          <groupId>org.restlet.jse</groupId>
@@ -133,17 +133,17 @@
       <dependency>
         <groupId>com.ggasoftware.indigo</groupId>
         <artifactId>indigo</artifactId>
-        <version>1.1</version>
+        <version>1.1.4</version>
       </dependency>
       <dependency>
         <groupId>com.ggasoftware.indigo</groupId>
         <artifactId>indigo-renderer</artifactId>
-        <version>1.1</version>
+        <version>1.1.4</version>
       </dependency>
       <dependency>
         <groupId>com.ggasoftware.indigo</groupId>
         <artifactId>jna</artifactId>
-        <version>1.1</version>
+        <version>1.1.4</version>
       </dependency>
       <dependency>
          <groupId>junit</groupId>
@@ -162,8 +162,7 @@
       <plugins>
          <plugin>
             <groupId>org.codehaus.mojo</groupId>
-            <artifactId>cobertura-maven-plugin
-            </artifactId>
+            <artifactId>cobertura-maven-plugin</artifactId>
          </plugin>
       </plugins>
    </reporting>
