--- a/pom.xml
+++ b/pom.xml
@@ -109,12 +109,12 @@
       <dependency>
          <groupId>uk.ac.cam.ch.opsin</groupId>
          <artifactId>opsin-core</artifactId>
-         <version>1.3.0</version>
+         <version>2.0-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>uk.ac.cam.ch.opsin</groupId>
          <artifactId>opsin-inchi</artifactId>
-         <version>1.3.0</version>
+         <version>2.0-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>org.restlet.jse</groupId>
