--- a/pom.xml
+++ b/pom.xml
@@ -132,19 +132,14 @@
          <version>2.0.1</version>
       </dependency>
       <dependency>
-        <groupId>com.ggasoftware.indigo</groupId>
+        <groupId>com.ggasoftware</groupId>
         <artifactId>indigo</artifactId>
-        <version>1.1.10</version>
+        <version>1.1.11</version>
       </dependency>
       <dependency>
         <groupId>com.ggasoftware.indigo</groupId>
         <artifactId>indigo-renderer</artifactId>
-        <version>1.1.10</version>
-      </dependency>
-      <dependency>
-        <groupId>com.ggasoftware.indigo</groupId>
-        <artifactId>jna</artifactId>
-        <version>1.1.10</version>
+        <version>1.1.11</version>
       </dependency>
       <dependency>
          <groupId>junit</groupId>
