Added <finalName>opsin</finalName> and made version numbers explicit aesthetic changes

--- a/pom.xml
+++ b/pom.xml
@@ -1,134 +1,137 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project>
-   <modelVersion>4.0.0</modelVersion>
-   <groupId>wwmm</groupId>
-   <artifactId>opsin-ws</artifactId>
-   <packaging>war</packaging>
-   <version>0.1-SNAPSHOT</version>
-   <name>OPSIN Web Service</name>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>wwmm</groupId>
+  <artifactId>opsin-ws</artifactId>
+  <packaging>war</packaging>
+  <version>0.1-SNAPSHOT</version>
+  <name>OPSIN Web Service</name>
   <licenses>
     <license>
       <name>GNU General Public License, version 3</name>
       <url>http://www.opensource.org/licenses/gpl-3.0</url>
     </license>
   </licenses>
-   <build>
-      <resources>
-        <resource>
-        <directory>src/main/webapp</directory>
-        <includes>
-          <include>*.html</include>
-          <include>*.js</include>
-        </includes>
-        </resource>
-      </resources>
-      <plugins>
-         <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-               <source>1.5</source>
-               <target>1.5</target>
-            </configuration>
-         </plugin>
-         <plugin>
-            <groupId>org.mortbay.jetty</groupId>
-            <artifactId>maven-jetty-plugin</artifactId>
-            <executions>
-               <execution>
-                  <id>start-jetty</id>
-                  <phase>pre-integration-test</phase>
-                  <goals>
-                     <goal>run</goal>
-                  </goals>
-                  <configuration>
-                     <scanIntervalSeconds>0</scanIntervalSeconds>
-                     <daemon>true</daemon>
-                  </configuration>
-               </execution>
-               <execution>
-                  <id>stop-jetty</id>
-                  <phase>post-integration-test</phase>
-                  <goals>
-                     <goal>stop</goal>
-                  </goals>
-               </execution>
-            </executions>
-            <configuration>
-               <scanIntervalSeconds>5</scanIntervalSeconds>
-               <connectors>
-                  <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-                     <port>8989</port>
-                     <maxIdleTime>60000</maxIdleTime>
-                  </connector>
-               </connectors>
-               <stopKey>opsin-jetty-key</stopKey>
-               <stopPort>5555</stopPort>
-               <contextPath>/</contextPath>
-            </configuration>
-         </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-         </plugin>
-      </plugins>
-   </build>
-   <repositories>
-      <repository>
-         <id>ucc-repo</id>
-         <url>https://maven.ch.cam.ac.uk/m2repo
-         </url>
-      </repository>
-      <repository>
-        <id>maven-restlet</id>
-        <name>Public online Restlet repository</name>
-        <url>http://maven.restlet.org</url>
-      </repository>
-   </repositories>
-   <properties>
-      <restlet.version>2.1.3</restlet.version>
-			<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-   </properties>
-   <dependencies>
-      <dependency>
-         <groupId>uk.ac.cam.ch.opsin</groupId>
-         <artifactId>opsin-core</artifactId>
-         <version>2.0-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-         <groupId>uk.ac.cam.ch.opsin</groupId>
-         <artifactId>opsin-inchi</artifactId>
-         <version>2.0-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-         <groupId>org.restlet.jse</groupId>
-         <artifactId>org.restlet</artifactId>
-         <version>${restlet.version}</version>
-      </dependency>
-      <dependency>
-         <groupId>org.restlet.jee</groupId>
-         <artifactId>org.restlet.ext.servlet</artifactId>
-         <version>${restlet.version}</version>
-      </dependency>
-      <dependency>
-         <groupId>commons-io</groupId>
-         <artifactId>commons-io</artifactId>
-         <version>2.0.1</version>
-      </dependency>
-      <dependency>
-        <groupId>com.ggasoftware</groupId>
-        <artifactId>indigo</artifactId>
-        <version>1.1.11</version>
-      </dependency>
-      <dependency>
-        <groupId>com.ggasoftware.indigo</groupId>
-        <artifactId>indigo-renderer</artifactId>
-        <version>1.1.11</version>
-      </dependency>
-      <dependency>
-         <groupId>junit</groupId>
-         <artifactId>junit</artifactId>
-         <version>4.11</version>
-         <scope>test</scope>
-      </dependency>
-   </dependencies>
+  <build>
+    <finalName>opsin</finalName>
+    <resources>
+      <resource>
+      <directory>src/main/webapp</directory>
+      <includes>
+        <include>*.html</include>
+        <include>*.js</include>
+      </includes>
+      </resource>
+    </resources>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>1.5</source>
+          <target>1.5</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <version>2.16</version>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>maven-jetty-plugin</artifactId>
+        <version>6.1.26</version>
+        <executions>
+           <execution>
+              <id>start-jetty</id>
+              <phase>pre-integration-test</phase>
+              <goals>
+                 <goal>run</goal>
+              </goals>
+              <configuration>
+                 <scanIntervalSeconds>0</scanIntervalSeconds>
+                 <daemon>true</daemon>
+              </configuration>
+           </execution>
+           <execution>
+              <id>stop-jetty</id>
+              <phase>post-integration-test</phase>
+              <goals>
+                 <goal>stop</goal>
+              </goals>
+           </execution>
+        </executions>
+        <configuration>
+          <scanIntervalSeconds>5</scanIntervalSeconds>
+          <connectors>
+            <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+              <port>8989</port>
+              <maxIdleTime>60000</maxIdleTime>
+            </connector>
+          </connectors>
+          <stopKey>opsin-jetty-key</stopKey>
+          <stopPort>5555</stopPort>
+          <contextPath>/</contextPath>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+  <repositories>
+    <repository>
+      <id>ucc-repo</id>
+      <url>https://maven.ch.cam.ac.uk/m2repo</url>
+    </repository>
+    <repository>
+      <id>maven-restlet</id>
+      <name>Public online Restlet repository</name>
+      <url>http://maven.restlet.org</url>
+    </repository>
+  </repositories>
+  <properties>
+    <restlet.version>2.1.3</restlet.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  <dependencies>
+    <dependency>
+      <groupId>uk.ac.cam.ch.opsin</groupId>
+      <artifactId>opsin-core</artifactId>
+      <version>2.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>uk.ac.cam.ch.opsin</groupId>
+      <artifactId>opsin-inchi</artifactId>
+      <version>2.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.restlet.jse</groupId>
+      <artifactId>org.restlet</artifactId>
+      <version>${restlet.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.restlet.jee</groupId>
+      <artifactId>org.restlet.ext.servlet</artifactId>
+      <version>${restlet.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.ggasoftware</groupId>
+      <artifactId>indigo</artifactId>
+      <version>1.1.11</version>
+    </dependency>
+    <dependency>
+      <groupId>com.ggasoftware.indigo</groupId>
+      <artifactId>indigo-renderer</artifactId>
+      <version>1.1.11</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 </project>
