--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,15 @@
       <url>http://www.opensource.org/licenses/gpl-3.0</url>
     </license>
   </licenses>
+  <scm>
+    <url>http://bitbucket.org/dan2097/opsin-ws/</url>
+    <connection>
+      scm:hg:http://bitbucket.org/dan2097/opsin-ws
+    </connection>
+    <developerConnection>
+      scm:hg:http://bitbucket.org/dan2097/opsin-ws
+    </developerConnection>
+  </scm>
   <build>
     <finalName>opsin</finalName>
     <resources>
@@ -33,9 +42,9 @@
         </configuration>
       </plugin>
       <plugin>
-        <version>2.16</version>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.16</version>
       </plugin>
       <plugin>
         <groupId>org.mortbay.jetty</groupId>
@@ -95,12 +104,12 @@
     <dependency>
       <groupId>uk.ac.cam.ch.opsin</groupId>
       <artifactId>opsin-core</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>1.6.0</version>
     </dependency>
     <dependency>
       <groupId>uk.ac.cam.ch.opsin</groupId>
       <artifactId>opsin-inchi</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>1.6.0</version>
     </dependency>
     <dependency>
       <groupId>org.restlet.jse</groupId>
