--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>wwmm</groupId>
   <artifactId>opsin-ws</artifactId>
   <packaging>war</packaging>
-  <version>0.1-SNAPSHOT</version>
+  <version>0.1</version>
   <name>OPSIN Web Service</name>
   <licenses>
     <license>
@@ -20,6 +20,7 @@
     <developerConnection>
       scm:hg:http://bitbucket.org/dan2097/opsin-ws
     </developerConnection>
+    <tag>opsin-ws-0.1</tag>
   </scm>
   <build>
     <finalName>opsin</finalName>
