[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>wwmm</groupId>
   <artifactId>opsin-ws</artifactId>
   <packaging>war</packaging>
-  <version>0.1</version>
+  <version>0.2-SNAPSHOT</version>
   <name>OPSIN Web Service</name>
   <licenses>
     <license>
@@ -20,7 +20,7 @@
     <developerConnection>
       scm:hg:http://bitbucket.org/dan2097/opsin-ws
     </developerConnection>
-    <tag>opsin-ws-0.1</tag>
+    <tag>HEAD</tag>
   </scm>
   <build>
     <finalName>opsin</finalName>
