--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
         <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
+          <source>1.6</source>
+          <target>1.6</target>
         </configuration>
       </plugin>
       <plugin>
@@ -98,8 +98,8 @@
     </repository>
   </repositories>
   <properties>
-    <opsin.version>2.0-SNAPSHOT</opsin.version>
-    <restlet.version>2.1.3</restlet.version>
+    <opsin.version>2.0.0</opsin.version>
+    <restlet.version>2.3.3</restlet.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
@@ -126,7 +126,7 @@
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>2.0.1</version>
+      <version>2.4</version>
     </dependency>
     <dependency>
       <groupId>com.ggasoftware</groupId>
