Corrected class name

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,15 +6,11 @@
 	<display-name>OPSIN</display-name>
     <context-param>
        <param-name>org.restlet.application</param-name>
-       <param-value>
-          uk.ac.cam.ch.opsin.ws.OPSINWebApp
-       </param-value>
+       <param-value>uk.ac.cam.ch.opsin.ws.OpsinWebApp</param-value>
     </context-param>
     <servlet>
        <servlet-name>restlet</servlet-name>
-       <servlet-class>
-          org.restlet.ext.servlet.ServerServlet
-       </servlet-class>
+       <servlet-class>org.restlet.ext.servlet.ServerServlet</servlet-class>
     </servlet>
 	<servlet-mapping>
 		<servlet-name>restlet</servlet-name>
