--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
   </repositories>
   <properties>
     <opsin.version>2.0.0</opsin.version>
-    <restlet.version>2.2.3</restlet.version>
+    <restlet.version>2.1.3</restlet.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
@@ -121,6 +121,11 @@
     <dependency>
       <groupId>org.restlet.jee</groupId>
       <artifactId>org.restlet.ext.servlet</artifactId>
+      <version>${restlet.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.restlet.jse</groupId>
+      <artifactId>org.restlet.ext.json</artifactId>
       <version>${restlet.version}</version>
     </dependency>
     <dependency>
