--- a/pom.xml
+++ b/pom.xml
@@ -134,14 +134,14 @@
       <version>2.4</version>
     </dependency>
     <dependency>
-      <groupId>com.ggasoftware</groupId>
+      <groupId>com.epam.indigo</groupId>
       <artifactId>indigo</artifactId>
-      <version>1.1.11</version>
+      <version>1.2.2beta-r37</version>
     </dependency>
     <dependency>
-      <groupId>com.ggasoftware.indigo</groupId>
+      <groupId>com.epam.indigo</groupId>
       <artifactId>indigo-renderer</artifactId>
-      <version>1.1.11</version>
+      <version>1.2.2beta-r37</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
