--- a/pom.xml
+++ b/pom.xml
@@ -36,16 +36,16 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
+        <version>3.5.1</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.7</source>
+          <target>1.7</target>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.16</version>
+        <version>2.19.1</version>
       </plugin>
       <plugin>
         <groupId>org.mortbay.jetty</groupId>
@@ -99,7 +99,7 @@
   </repositories>
   <properties>
     <opsin.version>3.0-SNAPSHOT</opsin.version>
-    <restlet.version>2.1.3</restlet.version>
+    <restlet.version>2.3.7</restlet.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
@@ -136,12 +136,12 @@
     <dependency>
       <groupId>com.epam.indigo</groupId>
       <artifactId>indigo</artifactId>
-      <version>1.2.2beta-r37</version>
+      <version>1.2.3.r0</version>
     </dependency>
     <dependency>
       <groupId>com.epam.indigo</groupId>
       <artifactId>indigo-renderer</artifactId>
-      <version>1.2.2beta-r37</version>
+      <version>1.2.3.r0</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
