--- a/pom.xml
+++ b/pom.xml
@@ -137,17 +137,17 @@
     <dependency>
       <groupId>com.epam.indigo</groupId>
       <artifactId>indigo</artifactId>
-      <version>1.2.3.r0</version>
+      <version>1.3.0beta.r354</version>
     </dependency>
     <dependency>
       <groupId>com.epam.indigo</groupId>
       <artifactId>indigo-renderer</artifactId>
-      <version>1.2.3.r0</version>
+      <version>1.3.0beta.r354</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
