--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
     </repository>
   </repositories>
   <properties>
-    <opsin.version>3.0-SNAPSHOT</opsin.version>
+    <opsin.version>2.4.0</opsin.version>
     <restlet.version>2.3.7</restlet.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
