--- a/pom.xml
+++ b/pom.xml
@@ -34,12 +34,23 @@
       </resource>
     </resources>
     <plugins>
+      <!-- Use Java 1.7 -->
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.1</version>
+        <version>3.8.1</version>
         <configuration>
           <source>1.7</source>
           <target>1.7</target>
+        </configuration>
+      </plugin>
+      <!-- See JDK-8212233 -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+          <source>7</source>
         </configuration>
       </plugin>
       <plugin>
@@ -94,8 +105,8 @@
     </repository>
   </repositories>
   <properties>
-    <opsin.version>2.4.0</opsin.version>
-    <restlet.version>2.4.3</restlet.version>
+    <opsin.version>3.0-SNAPSHOT</opsin.version>
+    <restlet.version>2.3.7</restlet.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
