--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,12 @@
     </license>
   </licenses>
   <scm>
-    <url>http://bitbucket.org/dan2097/opsin-ws/</url>
+    <url>https://github.com/dan2097/opsin</url>
     <connection>
-      scm:hg:http://bitbucket.org/dan2097/opsin-ws
+      scm:git:https://github.com/dan2097/opsin-ws
     </connection>
     <developerConnection>
-      scm:hg:http://bitbucket.org/dan2097/opsin-ws
+      scm:git:https://github.com/dan2097/opsin-ws
     </developerConnection>
     <tag>HEAD</tag>
   </scm>
