--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
     </repository>
   </repositories>
   <properties>
-    <opsin.version>3.0-SNAPSHOT</opsin.version>
+    <opsin.version>2.5.0</opsin.version>
     <restlet.version>2.3.12</restlet.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
