--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
     <repository>
       <id>maven-restlet</id>
       <name>Restlet repository</name>
-      <url>http://maven.restlet.com</url>
+      <url>https://maven.restlet.com</url>
     </repository>
   </repositories>
   <properties>
