Use maven-war-plugin 3.3.1
Attempt to fix a JDK 16 issue

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
           <stopPort>5555</stopPort>
           <contextPath>/</contextPath>
         </configuration>
+     </plugin>
+     <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.1</version>
       </plugin>
     </plugins>
   </build>
