--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
     </repository>
   </repositories>
   <properties>
-    <opsin.version>3.0-SNAPSHOT</opsin.version>
+    <opsin.version>2.6.0</opsin.version>
     <restlet.version>2.4.3</restlet.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
