--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
     <repository>
       <id>maven-restlet</id>
       <name>Restlet repository</name>
-      <url>https://maven.restlet.com</url>
+      <url>https://maven.restlet.talend.com</url>
     </repository>
   </repositories>
   <properties>
