--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         # test against latest update of each major Java version:
-        java: [ 8, 11, 17, 21 ]
+        java: [ 11, 17, 21 ]
         # test against major operating systems
         os: [ubuntu-22.04, windows-latest, macos-latest]
     name: Java ${{ matrix.java }} on ${{ matrix.os }}
