--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,9 +9,10 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         # test against latest update of each major Java version:
-        java: [ 11, 17, 21 ]
+        java: [ 8, 11, 17, 21 ]
         # test against major operating systems
         os: [ubuntu-22.04, windows-latest, macos-latest]
     name: Java ${{ matrix.java }} on ${{ matrix.os }}
@@ -26,7 +27,7 @@ jobs:
       - name: Setup java
         uses: actions/setup-java@v3
         with:
-          distribution: 'adopt'
+          distribution: 'zulu'
           java-version: ${{ matrix.java }}
       - name: Build with Maven
         run: mvn -B clean test javadoc:javadoc package
